[package]
name = "yoloxide"
version = "0.3.3"
authors = ["Matrixmage <osmithsi@sfu.ca>"]
edition = "2018"

repository = "https://github.com/Jerald/yoloxide"
license = "MIT"
description = "A rusty implementation of the Yolol language from the upcoming game Starbase."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.94", features = ["derive"] }
serde_json = "1.0.40"

yolol_number = "0.5.0"

# God damn num_traits. You WILL be gone soon.
# You will rue the day you made me use your viral trait garbage.
num-traits = "0.2.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

[dev-dependencies]
wasm-bindgen-test = "0.2.48"

# Release build optimized for small code size
[profile.release]
opt-level = "s"